--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
           push: true
           tags: 
             decioajr/rotten-potatoes:latest
-            decioajr/rotten-potatoes:${{ github.run_number }}
+            decioajr/rotten-potatoes:v${{ github.run_number }}
