--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
           file: ./src/Dockerfile
           push: true
           tags: 
-            decioajr/rotten-potatoes:latest
+            decioajr/rotten-potatoes:${{ github.run_number }}
+            
