--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           tags: 
             decioajr/rotten-potatoes:${{ github.run_number }}
   CD:
+    needs : [CI]
     runs-on: ubuntu-latest
     
     steps:
@@ -38,6 +39,6 @@ jobs:
         uses: Azure/k8s-set-context@v1.1
         with:
           method: kubeconfig
-          kubeconfig: ${{ secrets.k8s_kubeconfig }}
+          kubeconfig: ${{ secrets.K8S_CONFIG }}
       
       
