--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -56,7 +56,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: decioajr/rotten-potatoes:v2
+        image: decioajr/rotten-potatoes:v1
         ports: 
          - containerPort: 5000
         env:
@@ -84,7 +84,7 @@ spec:
     - port: 80
       targetPort: 5000
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
 
 
 
